[package]
name = "heavenly-webgu-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "heavenly_webgu_rust"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# HTTP клиент
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# Парсинг
html5ever = "0.26"
markup5ever_rcdom = "0.1"
cssparser = "0.33"
selectors = "0.25"

# Безопасность
ring = "0.17"
rustls = "0.21"

# Утилиты
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"

# Логирование
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
